# Research-sensei

./: .env.example  .gitattributes  .gitignore  README.md  RS设计文档 .md  pyproject.toml  start.bat
.github/workflows/: reliability.yml
backend/: __init__.py  acquisition.py  config.py  context.py  direction.py  drill.py  formula.py  grounding.py  ingestion.py  interactive.py  jobs.py  patterns.py  pipeline.py  query.py  render.py  schemas.py  selection.py  source_resolver.py  teaching.py  understanding.py  web.py  workspace.py
backend/llm/: __init__.py  client.py  prompt_builder.py  response_cache.py
cards/html/: concept_card.html  direction_map.html  drill_card.html  formula_card.html  paper_card.html  pattern_card.html
cards/json/: concept_card.json  direction_map.json  drill_card.json  formula_card.json  paper_card.json  pattern_card.json
config/: sensei.example.toml
constraints/: compatibility.txt  py310.txt  py313.txt
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  DESIGN.md  DEVELOPMENT.md  FULL_PROJECT_REVIEW.md  GLOSSARY.md  IMPLEMENTATION_PLAN.md  LAST_CODEX_OUTPUT.md  M1_LOCAL_ENVIRONMENT.md  MAIN_CHAIN_V1_REVIEW.md  MIGRATION_PLAN.md  MODULE_CONTRACTS.md  OPEN_QUESTIONS.md  PHASE_10_REVIEW.md  PHASE_1_7_REVIEW.md  PHASE_MAPPING.md  PRE_PHASE12_PROJECT_AUDIT.md  PRODUCT_REQUIREMENTS.md  PROGRESS.md  PROJECT_ALIGNMENT_BRIEF.md  QUALITY_EVALUATION_SPEC.md  RESEARCHSENSEI_TECH_ROUTE_REVIEW.md  REUSE_REPORT.md  REVIEW_CHECKLIST.md  STATUS.md  TECHNICAL_DISCUSSION.md  architecture.md  dependency-updates.md  user_flow.md
docs/archive/: RS设计文档.md
docs/audit/: FULL_PROJECT_REALITY_AUDIT.md
docs/development/: AUDIT_QUALITY.md  ENGINEERING_RELIABILITY.md  EVIDENCE.md  FRONTEND_RENDER.md  FULL_PIPELINE.md  INTERACTIVE_LEARNING.md  LEARNING_STUDIO.md  LITERATURE_DISCOVERY.md  LITERATURE_SEARCH.md  M1_LITERATURE_SEARCH.md  M2_1_PARSER.md  M2_2_EVIDENCE.md  M2_3_PAPER_UNDERSTANDING.md  M2_4_AUDIT_QUALITY.md  PAPER_TUTOR.md  (+9 more)
examples/: render_manual_sample.py
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
legacy_tests/: README.md  test_drill_llm.py  test_formula_llm.py  test_interactive_llm.py  test_patterns_llm.py  test_query_llm.py  test_teaching_llm.py  test_understanding_llm.py  test_v05_formula_context_interactive.py  test_v05_ingestion_grounding_understanding.py  test_v05_model_gateway.py  test_v05_pipeline_sample.py  test_v05_query_selection.py
scripts/: generate_m1_acceptance.py  generate_m1_v2_acceptance.py  m1_acceptance_runner.py  m1_device_diagnosis.py  m1_environment_audit.py  m1_fix_acceptance_package.py  m1_fix_equation_groups.py  m1_mineru_gpu_smoke_test.py  m1_regenerate_reports.py  m1_target_mode_eval.py  m1_unseen_paper_search.py  m2_run_understanding.py  repair_m1_acceptance_package.py  repair_m1_equation_groups.py  run_literature_acquisition_acceptance.py  run_literature_acquisition_smoke.py  run_live_eval.py  run_m1_mineru_gpu_check.py  run_m1_mineru_primary_acceptance.py  run_m1_relevance_benchmark.py  run_m1_v2_mineru_primary_acceptance.py  run_m2_live_acceptance.py  run_main_chain_acceptance.py  run_main_chain_matrix.py  run_main_chain_smoke.py  run_relevance_benchmark.py  validate_m1_fixes.py
tests/: conftest.py  test_acquisition_adapters.py  test_api_contract_v06.py  test_api_documents_parse.py  test_api_gating.py  test_api_jobs_artifacts.py  test_api_llm_config.py  test_api_parse_sources.py  test_api_settings.py  test_background_tasks.py  test_browser_downloader.py  test_canonical_paper.py  test_ccswitch_bridge.py  test_claim_evidence.py  test_config_contract_v06.py  test_core_config.py  test_core_errors_logging.py  test_deep_audit_fixes.py  test_direction_deep_read_api.py  test_direction_exploration_service.py  test_direction_runner.py  test_direction_schemas.py  test_document_schema.py  test_encoding_hygiene.py  test_env_loader.py  test_evidence_pack.py  test_evidence_retriever.py  test_formula_card.py  test_formula_card_builder.py  test_formula_card_schema.py  test_formula_card_v2.py  test_job_service.py  test_job_store.py  test_latex_postprocessor.py  test_learning_studio.py  test_lightweight_ingestion.py  test_literature_acquisition_fulltext.py  test_literature_relevance_benchmark.py  test_llm_client.py  test_llm_config.py  (+66 more)
tests_e2e/: README.md  smoke_test.py
tests_live/: test_full_live_eval.py  test_m1_live_search_and_source.py  test_m1_real_live_eval.py  test_m2_real_llm_smoke.py  test_real_pdf_end_to_end.py
(+754 files in other folders)
