[project]
name = "research-sensei"
version = "0.5.0"
description = "AI-powered research paper reading assistant with LLM integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "httpx-sse>=0.4",
  "jinja2>=3.1",
  "pymupdf>=1.24",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "uvicorn>=0.27",
  "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
external = [
  "docling>=2.0",
  "marker>=1.0",
  "instructor>=1.0",
  "networkx>=3.0",
  "py-fsrs>=2.0",
  "sympy>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
markers = [
  "live: real external service tests (default excluded)",
  "network: tests requiring network (default excluded)",
  "llm: real LLM call tests (default excluded)",
  "slow: slow tests (default excluded)",
]
addopts = [
  "--ignore=legacy_tests",
  "--ignore=tests_e2e",
  "--ignore=tests_live",
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
