[project]
name = "research-sensei"
version = "0.5.0"
description = "AI-powered research paper reading assistant with LLM integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "httpx-sse>=0.4",
  "jinja2>=3.1",
  "pymupdf>=1.24",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "uvicorn>=0.27",
  "aiosqlite>=0.19",
  "arxiv>=2.1",
  "pyalex>=0.15",
  "semanticscholar>=0.8",
  "habanero>=1.2",
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "paper-search-mcp>=0.1.4",
  "flashrank>=0.2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
external = [
  "docling>=2.0",
  "marker>=1.0",
  "instructor>=1.0",
  "networkx>=3.0",
  "py-fsrs>=2.0",
  "sympy>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_live"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
markers = [
  "live: real external service tests",
  "network: tests requiring network",
  "llm: real LLM call tests",
  "slow: slow tests",
]
addopts = [
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
