[project]
name = "research-sensei"
version = "0.6.0"
description = "AI-powered research paper reading assistant with LLM integration."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.110,<1",
  "httpx>=0.28.1,<1",
  "httpx-sse>=0.4,<1",
  "jinja2>=3.1,<4",
  "pymupdf>=1.24,<2",
  "python-multipart>=0.0.20,<1",
  "python-dotenv>=1.0,<2",
  "pydantic>=2.0,<3",
  "uvicorn>=0.27,<1",
  "aiosqlite>=0.19,<1",
  "arxiv>=2.1,<5",
  "pyalex>=0.15,<1",
  "semanticscholar>=0.8,<1",
  "habanero>=1.2,<3",
  "beautifulsoup4>=4.12,<5",
  "requests>=2.31,<3",
  "paper-search-mcp>=0.1.4,<1",
  "flashrank>=0.2.10,<1",
  "tomli>=2,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "pytest-asyncio>=0.23,<2",
  "mypy>=1.16,<2",
  "ruff>=0.12,<1",
  "types-requests>=2.31,<3",
]
external = [
  "docling>=2.0,<3",
  "marker>=1.0,<2",
  "mineru-vl-utils>=1.0.4,<2",
  "transformers>=4.57,<5",
  "accelerate>=1.13,<2",
  "instructor>=1.0,<2",
  "networkx>=3.0,<4",
  "py-fsrs>=2.0,<3",
  "sympy>=1.12,<2",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
files = ["src/researchsensei"]
follow_imports = "skip"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests", "tests_live"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
markers = [
  "live: real external service tests",
  "network: tests requiring network",
  "llm: real LLM call tests",
  "slow: slow tests",
]
addopts = [
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
